// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works plain 1`] = `
<div
  class=""
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with backgroundColor 1`] = `
.c0 {
  background-color: #73748b;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with borderColor 1`] = `
.c0 {
  border-color: #73748b;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with borderRadius 1`] = `
.c0 {
  border-radius: 0.25rem;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with borderWidth 1`] = `
.c0 {
  border-width: 4px;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with breakpoints 1`] = `
@media only screen and (min-width:1280px) {
  .c0 {
    font-size: 0.875rem;
    margin-bottom: 0.5rem;
  }
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with margin 1`] = `
.c0 {
  margin: 0.5rem;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with padding 1`] = `
.c0 {
  padding: 0.5rem;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with variable borderColors 1`] = `
.c0 {
  border-top-color: #73748b;
  border-right-color: #17a3a5;
  border-bottom-color: #72af5d;
  border-left-color: #ebc764;
}

<div
  class="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;
